# Simple-Shell

./: CMakeLists.txt  README.md
include/: ic.h
src/: ic.c  shell.c
